2012-11-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: LyX format update to lyxformat 413, LyX 2.x.x

2012-11-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Ensure we have an empty bag at the root in nice tree decompositions.
	* support/regression/tests/gcc-torture-execute-20060110-1.c:
	  Disable test which fails on arm for gbz80 due to unimplemented long long constants.

2012-11-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: removed duplicate commands my lyx edit added

2012-11-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: document --no-ret-without-call and fix some typos

2012-11-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (emitDummyCall): use temporary label,
	  (genPcall): use temporary label call instead of pushes,
	  (genJumpTab): optimized thresholds and always use jmp @a+dptr
	* src/mcs51/peep.c (scan4op): detect lcall temporary label
	* src/mcs51/ralloc.c: cosmetics

2012-11-18 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic16-header-parser.pl:
          New capability: Handling of I/O pins of the peripheral.
          The program creates six files in the actual directory:
                adc.tables, ccp.tables, pwm.tables, i2c.tables,
                spi.tables, usart.tables

2012-11-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglobl.h,
	* src/mcs51/main.c
	* src/mcs51/gen.c (emitDummyCall,genJumpTab, genPcall):
	  added --no-ret-without-call option for compatibility with
	  Infineon's Memory Extension Stack

2012-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* support/scripts/sdcc.nsi: added sdas390

2012-11-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #3577669
	* support/regression/tests/gcc-torture-execute-20021010-1.c: reenabled

2012-11-13 Maarten Brock <sourceforge.brock AT dse.nl>
